feat: add estilo h1 sobre e mais produtos e margens

--- a/index.html
+++ b/index.html
@@ -35,6 +35,74 @@
     <section id="promocoes">
         <h2>Promoções</h2>
         <div class="product-container">
+            <div class="product-promo">
+                <img src="assets/caneca1.jpg" alt="Caneca Promocional 1">
+                <h3>Caneca Promocional 1</h3>
+                <p>R$29,90</p>
+            </div>
+            <div class="product-promo">
+                <img src="assets/caneca1.jpg" alt="Caneca Promocional 2">
+                <h3>Caneca Promocional 2</h3>
+                <p>R$29,90</p>
+            </div>
+            <div class="product-promo">
+                <img src="assets/caneca1.jpg" alt="Caneca Promocional 3">
+                <h3>Caneca Promocional 3</h3>
+                <p>R$29,90</p>
+            </div>
+        </div>
+        <div class="product-container">
+            <div class="product-promo">
+                <img src="assets/caneca1.jpg" alt="Caneca Promocional 1">
+                <h3>Caneca Promocional 1</h3>
+                <p>R$29,90</p>
+            </div>
+            <div class="product-promo">
+                <img src="assets/caneca1.jpg" alt="Caneca Promocional 2">
+                <h3>Caneca Promocional 2</h3>
+                <p>R$29,90</p>
+            </div>
+            <div class="product-promo">
+                <img src="assets/caneca1.jpg" alt="Caneca Promocional 3">
+                <h3>Caneca Promocional 3</h3>
+                <p>R$29,90</p>
+            </div>
+        </div>
+        <div class="product-container">
+            <div class="product">
+                <img src="assets/caneca1.jpg" alt="Caneca Promocional 1">
+                <h3>Caneca Promocional 1</h3>
+                <p>R$29,90</p>
+            </div>
+            <div class="product">
+                <img src="assets/caneca1.jpg" alt="Caneca Promocional 2">
+                <h3>Caneca Promocional 2</h3>
+                <p>R$29,90</p>
+            </div>
+            <div class="product">
+                <img src="assets/caneca1.jpg" alt="Caneca Promocional 3">
+                <h3>Caneca Promocional 3</h3>
+                <p>R$29,90</p>
+            </div>
+        </div>
+        <div class="product-container">
+            <div class="product">
+                <img src="assets/caneca1.jpg" alt="Caneca Promocional 1">
+                <h3>Caneca Promocional 1</h3>
+                <p>R$29,90</p>
+            </div>
+            <div class="product">
+                <img src="assets/caneca1.jpg" alt="Caneca Promocional 2">
+                <h3>Caneca Promocional 2</h3>
+                <p>R$29,90</p>
+            </div>
+            <div class="product">
+                <img src="assets/caneca1.jpg" alt="Caneca Promocional 3">
+                <h3>Caneca Promocional 3</h3>
+                <p>R$29,90</p>
+            </div>
+        </div>
+        <div class="product-container">
             <div class="product">
                 <img src="assets/caneca1.jpg" alt="Caneca Promocional 1">
                 <h3>Caneca Promocional 1</h3>
@@ -55,6 +123,57 @@
 
     <section id="produtos">
         <h2>Nossos Produtos</h2>
+        <div class="product-container">
+            <div class="product">
+                <img src="assets/caneca1.jpg" alt="Caneca 1">
+                <h3>Caneca 1</h3>
+                <p>R$49,90</p>
+            </div>
+            <div class="product">
+                <img src="assets/caneca1.jpg" alt="Caneca 2">
+                <h3>Caneca 2</h3>
+                <p>R$49,90</p>
+            </div>
+            <div class="product">
+                <img src="assets/caneca1.jpg" alt="Caneca 3">
+                <h3>Caneca 3</h3>
+                <p>R$49,90</p>
+            </div>
+        </div>
+        <div class="product-container">
+            <div class="product">
+                <img src="assets/caneca1.jpg" alt="Caneca 1">
+                <h3>Caneca 1</h3>
+                <p>R$49,90</p>
+            </div>
+            <div class="product">
+                <img src="assets/caneca1.jpg" alt="Caneca 2">
+                <h3>Caneca 2</h3>
+                <p>R$49,90</p>
+            </div>
+            <div class="product">
+                <img src="assets/caneca1.jpg" alt="Caneca 3">
+                <h3>Caneca 3</h3>
+                <p>R$49,90</p>
+            </div>
+        </div>
+        <div class="product-container">
+            <div class="product">
+                <img src="assets/caneca1.jpg" alt="Caneca 1">
+                <h3>Caneca 1</h3>
+                <p>R$49,90</p>
+            </div>
+            <div class="product">
+                <img src="assets/caneca1.jpg" alt="Caneca 2">
+                <h3>Caneca 2</h3>
+                <p>R$49,90</p>
+            </div>
+            <div class="product">
+                <img src="assets/caneca1.jpg" alt="Caneca 3">
+                <h3>Caneca 3</h3>
+                <p>R$49,90</p>
+            </div>
+        </div>
         <div class="product-container">
             <div class="product">
                 <img src="assets/caneca1.jpg" alt="Caneca 1">
