--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>VITART - Canecas Personalizadas</title>
     <link href="https://fonts.googleapis.com/css2?family=Rock+Salt&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
+    <link rel="shortcut icon" href="assets/caneca-de-cha.png" type="image/x-icon">
 </head>
 <body>
     <header>
