--- a/index.html
+++ b/index.html
@@ -70,51 +70,51 @@
             </div>
         </div>
         <div class="product-container">
-            <div class="product">
+            <div class="product-promo">
                 <img src="assets/caneca1.jpg" alt="Caneca Promocional 1">
                 <h3>Caneca Promocional 1</h3>
                 <p>R$29,90</p>
             </div>
-            <div class="product">
+            <div class="product-promo">
                 <img src="assets/caneca1.jpg" alt="Caneca Promocional 2">
                 <h3>Caneca Promocional 2</h3>
                 <p>R$29,90</p>
             </div>
-            <div class="product">
+            <div class="product-promo">
                 <img src="assets/caneca1.jpg" alt="Caneca Promocional 3">
                 <h3>Caneca Promocional 3</h3>
                 <p>R$29,90</p>
             </div>
         </div>
         <div class="product-container">
-            <div class="product">
+            <div class="product-promo">
                 <img src="assets/caneca1.jpg" alt="Caneca Promocional 1">
                 <h3>Caneca Promocional 1</h3>
                 <p>R$29,90</p>
             </div>
-            <div class="product">
+            <div class="product-promo">
                 <img src="assets/caneca1.jpg" alt="Caneca Promocional 2">
                 <h3>Caneca Promocional 2</h3>
                 <p>R$29,90</p>
             </div>
-            <div class="product">
+            <div class="product-promo">
                 <img src="assets/caneca1.jpg" alt="Caneca Promocional 3">
                 <h3>Caneca Promocional 3</h3>
                 <p>R$29,90</p>
             </div>
         </div>
         <div class="product-container">
-            <div class="product">
+            <div class="product-promo">
                 <img src="assets/caneca1.jpg" alt="Caneca Promocional 1">
                 <h3>Caneca Promocional 1</h3>
                 <p>R$29,90</p>
             </div>
-            <div class="product">
+            <div class="product-promo">
                 <img src="assets/caneca1.jpg" alt="Caneca Promocional 2">
                 <h3>Caneca Promocional 2</h3>
                 <p>R$29,90</p>
             </div>
-            <div class="product">
+            <div class="product-promo">
                 <img src="assets/caneca1.jpg" alt="Caneca Promocional 3">
                 <h3>Caneca Promocional 3</h3>
                 <p>R$29,90</p>
@@ -125,51 +125,51 @@
     <section id="produtos">
         <h2>Nossos Produtos</h2>
         <div class="product-container">
-            <div class="product">
+            <div class="product-promo">
                 <img src="assets/caneca1.jpg" alt="Caneca 1">
                 <h3>Caneca 1</h3>
                 <p>R$49,90</p>
             </div>
-            <div class="product">
+            <div class="product-promo">
                 <img src="assets/caneca1.jpg" alt="Caneca 2">
                 <h3>Caneca 2</h3>
                 <p>R$49,90</p>
             </div>
-            <div class="product">
+            <div class="product-promo">
                 <img src="assets/caneca1.jpg" alt="Caneca 3">
                 <h3>Caneca 3</h3>
                 <p>R$49,90</p>
             </div>
         </div>
         <div class="product-container">
-            <div class="product">
+            <div class="product-promo">
                 <img src="assets/caneca1.jpg" alt="Caneca 1">
                 <h3>Caneca 1</h3>
                 <p>R$49,90</p>
             </div>
-            <div class="product">
+            <div class="product-promo">
                 <img src="assets/caneca1.jpg" alt="Caneca 2">
                 <h3>Caneca 2</h3>
                 <p>R$49,90</p>
             </div>
-            <div class="product">
+            <div class="product-promo">
                 <img src="assets/caneca1.jpg" alt="Caneca 3">
                 <h3>Caneca 3</h3>
                 <p>R$49,90</p>
             </div>
         </div>
         <div class="product-container">
-            <div class="product">
+            <div class="product-promo">
                 <img src="assets/caneca1.jpg" alt="Caneca 1">
                 <h3>Caneca 1</h3>
                 <p>R$49,90</p>
             </div>
-            <div class="product">
+            <div class="product-promo">
                 <img src="assets/caneca1.jpg" alt="Caneca 2">
                 <h3>Caneca 2</h3>
                 <p>R$49,90</p>
             </div>
-            <div class="product">
+            <div class="product-promo">
                 <img src="assets/caneca1.jpg" alt="Caneca 3">
                 <h3>Caneca 3</h3>
                 <p>R$49,90</p>
